feat: add getChaptersInfo API
